Fix: buttons are now readable regardless of the streamer colours

--- a/assets/sass/components/_streamer-gradients.sass
+++ b/assets/sass/components/_streamer-gradients.sass
@@ -20,6 +20,8 @@ button.button.is-streamer-gradient
 
   z-index: 10
 
+  color: var(--streamer-color-text, $grey-darker)
+
   &[disabled]
     cursor: not-allowed
     opacity: 1
